<resources>
    <string name="app_name">Random Team Generator</string>

    <!-- ACTIVITY STRINGS -->
    <string name="main_activity_app_title" translatable="false">Random Teams Generator</string>

    <!-- MAIN FRAGMENT STRINGS -->
    <string name="add_name">Click the button to add a name</string>
    <string name="add_button">ADD</string>

    <!-- LIST NAMES ROW -->
    <string name="temp_name">Name…</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>

    <!-- FRAGMENT NAMES LIST -->
    <string name="generate_teams">GENERATE</string>
    <string name="add_names_floating_button_description">Add name</string>
    <string name="info_text_view">Click on names to edit. Feel free to add or cancel as many you want.</string>
    <string name="help_text">\u2022 The generate button will be available once you have added at least three names. \n\n\u2022 After clicked on the generate button, you need to choose how many teams you want to create. \n\n\u2022 If you delete all names you will me prompted to the start page.</string>


    <!-- FRAGMENT TEAMS LIST -->
    <string name="first_default_team_name" translatable="false">Pinguini Tattici</string>
    <string name="first_default_number" translatable="false">1</string>
    <string name="first_default_team_member_name" translatable="false">1 - Mario Rossi</string>
    <string name="alert_update_text">You are going to re-generate every teams from zero. \nAre you sure?</string>



    <!-- Toolbar strings -->
    <string name="names_title">Names</string>
    <string name="teams_title">Teams</string>

    <!-- Toolbar Icons -->
    <string name="toolbar_info_title" translatable="false">Info</string>
    <string name="toolbar_info_description" translatable="false">Info</string>
    <string name="toolbar_update_title">Update</string>
    <string name="toolbar_update_description">Update</string>

    <!-- Common Labels string -->
    <string name="continue_string">Continue</string>
    <string name="confirm_string">Confirm</string>
    <string name="add_lowercase_string">ADD</string>
    <string name="cancel_string">Cancel</string>
    <string name="name_string">Name</string>
    <string name="type_a_name_string">Type a name:</string>
    <string name="clear_button_text">CLEAR</string>
    <string name="retry_string">Retry</string>
    <string name="please_valid_name_string">Please insert a valid name</string>
    <string name="name_already_exist_string">That name added is already available in the list.</string>
    <string name="generate_button_text">GENERATE</string>
    <string name="regenerate_button_text">RE-GENERATE</string>
    <string name="settings_string">Settings</string>

    <!-- Preference Titles -->
    <string name="ui_settings_string">UI Settings</string>
    <string name="enable_dark_theme_string">Enable Dark Theme</string>
    <string name="about_String">About</string>
    <string name="version_string">Version</string>
    <string name="version_number_string" translatable="false">1.0</string>
    <string name="about_me_string">About me</string>
    <string name="about_me_summary_string" translatable="false">SdP-Dev\nSimone Di Paolo</string>
    <string name="thanks_contribute_string">Thanks for the contribute to:</string>
    <string name="bircni_name_string" translatable="false">bircni</string>

</resources>